--- a/stylefile.css
+++ b/stylefile.css
@@ -6,9 +6,14 @@ h1{
   font-family: fantasy;
   font-weight: 100;
 }
+li {
+  border: 2px solid blue;
+  padding: .5em;
+}
 a{
   text-decoration:none;
-  margin-left: 20px
+  margin-left: 20px;
+  color: black;
 }
 body{
   background-color:#E0FFFF
@@ -16,4 +21,97 @@ body{
 img{
   height: 250px;
   width: 200px;
+}
+#flex-container {
+  display: flex;
+  justify-content: flex-start;
+}
+#flex-container2 {
+  display: flex;
+  align-items: flex-end;
+}
+.box1{
+  height: 200px;
+  width: 200px;
+}
+.box2{
+  height: 200px;
+  width: 200px;
+  margin-left: 5px;
+}
+.box3{
+  height: 200px;
+  width: 200px;
+  margin-left: 5px;
+}
+.box4{
+  height: 150px;
+  width: 100px;
+  background-color:#eeeff2;
+  cursor:pointer;
+  flex-shrink: 0;
+}
+.box5{
+  height: 150px;
+  width: 100px;
+  margin-left: 10px;
+  background-color:#eeeff2;
+  cursor:pointer;
+  flex-shrink: 0;
+}
+.box6{
+  height: 150px;
+  width: 100px;
+  margin-left: 10px;
+  background-color:#eeeff2;
+  cursor:pointer;
+  flex-shrink: 0;
+}
+.box7{
+  height: 150px;
+  width: 100px;
+  margin-left: 10px;
+  background-color:#eeeff2;
+  cursor:pointer;
+  float: left;
+  flex-shrink: 0;
+}
+.box8{
+  height: 150px;
+  width: 100px;
+  margin-left: 10px;
+  background-color:#eeeff2;
+  cursor:pointer;
+  flex-shrink: 0;
+}
+.box9{
+  height: 150px;
+  width: 100px;
+  background-color:#eeeff2;
+  cursor:pointer;
+  position: absolute;
+  flex-shrink: 0;
+
+  float: right;
+  bottom: 10px;
+  right: 10px;
+}
+.box10{
+  width: 100%;
+
+}
+#hr1 {
+  border: none;
+  margin-top: auto;
+  border-left: 10px dotted #D0D0FF;
+  height:150px;
+}
+#hAll{
+  font-size: 40px;
+  margin-left:20px;
+  margin-top:-150px
+
+}
+span:hover {
+    background-color: #FFD700;
 }
