--- a/stylefile.css
+++ b/stylefile.css
@@ -6,9 +6,20 @@ h1{
   font-family: fantasy;
   font-weight: 100;
 }
-li {
-  border: 2px solid blue;
-  padding: .5em;
+ul#pets li{
+  font-size: 20px;
+  font-weight: bold;
+  color: #4B0082;
+}
+.cat{
+  font-size: 10px;
+  font-weight: lighter;
+  color: red;
+}
+.tableclass{
+  border: 2px;
+  background-color: #EE82EE;
+  align: center;
 }
 a{
   text-decoration:none;
